--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -108,7 +108,7 @@
     </div>
   </div>
 
-  <script src="https://leaflet.js.org/download.html"></script>
+  <!-- Leaflet CSS & JS for maps -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.9.4/leaflet.min.css" />
   <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.9.4/leaflet.min.js"></script>
   <script src="dashboard.js"></script>
