--- a/public/index.html
+++ b/public/index.html
@@ -14,95 +14,100 @@
     </header>
 
     <div class="content">
-      <form id="reportForm" enctype="multipart/form-data">
-        
-        <!-- Event Type -->
-        <div class="form-group">
-          <label for="eventType">Event Type *</label>
-          <select id="eventType" name="eventType" required>
-            <option value="">-- Select Event Type --</option>
-            <option value="earthquake">Earthquake</option>
-            <option value="flood">Flood</option>
-            <option value="hurricane">Hurricane/Cyclone</option>
-            <option value="tornado">Tornado</option>
-            <option value="wildfire">Wildfire</option>
-            <option value="landslide">Landslide</option>
-            <option value="tsunami">Tsunami</option>
-            <option value="volcanic">Volcanic Eruption</option>
-            <option value="chemical">Chemical/Industrial Hazard</option>
-            <option value="accident">Major Accident</option>
-            <option value="other">Other</option>
-          </select>
-        </div>
-
-        <!-- Description -->
-        <div class="form-group">
-          <label for="description">Event Description *</label>
-          <textarea id="description" name="description" placeholder="Describe the emergency situation..." required></textarea>
-        </div>
-
-        <!-- GPS Location -->
-        <div class="form-group">
-          <label>GPS Location *</label>
-          <div class="location-inputs">
-            <div class="input-row">
-              <input 
-                type="number" 
-                id="latitude" 
-                name="latitude" 
-                placeholder="Latitude" 
-                step="0.000001"
-                required
-              >
-              <input 
-                type="number" 
-                id="longitude" 
-                name="longitude" 
-                placeholder="Longitude" 
-                step="0.000001"
-                required
-              >
-            </div>
-            <button type="button" id="getLocationBtn" class="btn-secondary">📍 Get My Location</button>
-            <div id="locationStatus" class="location-status"></div>
+      <!-- Form Section -->
+      <div id="formSection" class="form-section">
+        <form id="reportForm" enctype="multipart/form-data">
+          
+          <!-- Event Type -->
+          <div class="form-group">
+            <label for="eventType">Event Type *</label>
+            <select id="eventType" name="eventType" required>
+              <option value="">-- Select Event Type --</option>
+              <option value="earthquake">Earthquake</option>
+              <option value="flood">Flood</option>
+              <option value="hurricane">Hurricane/Cyclone</option>
+              <option value="tornado">Tornado</option>
+              <option value="wildfire">Wildfire</option>
+              <option value="landslide">Landslide</option>
+              <option value="tsunami">Tsunami</option>
+              <option value="volcanic">Volcanic Eruption</option>
+              <option value="chemical">Chemical/Industrial Hazard</option>
+              <option value="accident">Major Accident</option>
+              <option value="other">Other</option>
+            </select>
           </div>
-        </div>
 
-        <!-- Picture Upload -->
-        <div class="form-group">
-          <label for="picture">Picture of Event</label>
-          <input type="file" id="picture" name="picture" accept="image/*">
-          <small>Accepted formats: JPG, PNG, GIF, WebP (Max 10MB)</small>
-          <div id="previewContainer" class="preview-container"></div>
-        </div>
+          <!-- Description -->
+          <div class="form-group">
+            <label for="description">Event Description *</label>
+            <textarea id="description" name="description" placeholder="Describe the emergency situation..." required></textarea>
+          </div>
 
-        <!-- Date & Time -->
-        <div class="form-group">
-          <label for="datetime">Date & Time of Event *</label>
-          <input type="datetime-local" id="datetime" name="datetime" required>
-        </div>
+          <!-- GPS Location -->
+          <div class="form-group">
+            <label>GPS Location *</label>
+            <div class="location-inputs">
+              <div class="input-row">
+                <input 
+                  type="number" 
+                  id="latitude" 
+                  name="latitude" 
+                  placeholder="Latitude" 
+                  step="0.000001"
+                  required
+                >
+                <input 
+                  type="number" 
+                  id="longitude" 
+                  name="longitude" 
+                  placeholder="Longitude" 
+                  step="0.000001"
+                  required
+                >
+              </div>
+              <button type="button" id="getLocationBtn" class="btn-secondary">📍 Get My Location</button>
+              <div id="locationStatus" class="location-status"></div>
+            </div>
+          </div>
 
-        <!-- Reporter Email -->
-        <div class="form-group">
-          <label for="email">Your Email Address *</label>
-          <input type="email" id="email" name="email" placeholder="your.email@example.com" required>
-        </div>
+          <!-- Picture Upload -->
+          <div class="form-group">
+            <label for="picture">Picture of Event</label>
+            <input type="file" id="picture" name="picture" accept="image/*">
+            <small>Accepted formats: JPG, PNG, GIF, WebP (Max 10MB)</small>
+            <div id="previewContainer" class="preview-container"></div>
+          </div>
 
-        <!-- Submit Button -->
-        <button type="submit" class="btn-submit">Submit Emergency Report</button>
+          <!-- Date & Time -->
+          <div class="form-group">
+            <label for="datetime">Date & Time of Event *</label>
+            <input type="datetime-local" id="datetime" name="datetime" required>
+          </div>
 
-        <!-- Success Message -->
-        <div id="successMessage" class="message success hidden"></div>
+          <!-- Reporter Email -->
+          <div class="form-group">
+            <label for="email">Your Email Address *</label>
+            <input type="email" id="email" name="email" placeholder="your.email@example.com" required>
+          </div>
 
-        <!-- Error Message -->
-        <div id="errorMessage" class="message error hidden"></div>
+          <!-- Submit Button -->
+          <button type="submit" class="btn-submit">Submit Emergency Report</button>
 
-        <!-- Loading Indicator -->
-        <div id="loading" class="loading hidden">
-          <div class="spinner"></div>
-          <p>Submitting report...</p>
-        </div>
-      </form>
+          <!-- Error Message -->
+          <div id="errorMessage" class="message error hidden"></div>
+
+          <!-- Loading Indicator -->
+          <div id="loading" class="loading hidden">
+            <div class="spinner"></div>
+            <p>Submitting report...</p>
+          </div>
+        </form>
+      </div>
+
+      <!-- Success Page Section -->
+      <div id="successSection" class="success-section hidden">
+        <div id="successMessage" class="message success"></div>
+      </div>
     </div>
 
     <footer>
